[package]
name = "php-buildpack"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.65"

[dependencies]
chrono = "0.4.24"
deref-derive = "0.1.0"
flate2 = { version = "1.0.24", default-features = false, features = ["zlib"] }
libcnb = "0.12.0"
libherokubuildpack = "0.12.0"
monostate = "0.1.6"
regex = "1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0"
serde_test = "1.0.147"
serde_with = "3.0.0"
sha2 = "0.10.6"
shell-words = "1.1.0"
strum = "0.24"
strum_macros = "0.24"
tar = "0.4.38"
url = { version = "2.3.1", features = ["serde"] }
ureq = { version = "2.5.0", default-features = false, features = ["tls"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
libcnb-test = "0.12.0"
figment = { version = "0.10.8", features = ["toml"] }
