[workspace]
resolver = "2"
members = ["buildpacks/php", "composer"]

[workspace.package]
edition = "2024"
rust-version = "1.89"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
# explicit priority because of https://github.com/rust-lang/cargo/issues/13565
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
