[package]
name = "composer"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { version = "2", features = ["deref", "from"] }
git-url-parse = "0.4"
monostate = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
# we need rstest from master for the #[dir] attribute (https://github.com/la10736/rstest/pull/307, not yet in a release)
rstest = { git = "https://github.com/la10736/rstest.git", branch = "master" }
serde_test = "1"
