[package]
name = "composer"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { version = "2", features = ["deref", "from"] }
git-url-parse = "0.6.0"
monostate = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
rstest = "0.26"
serde_test = "1"
