[package]
name = "composer"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { version = "2", features = ["deref", "from"] }
git-url-parse = "0.6.0"
indexmap = { version = "2", features = ["serde"] }
monostate = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.2", features = ["indexmap_2"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
assert-json-diff = "2"
rstest = "0.26"
serde_test = "1"
