[package]
name = "php-buildpack"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4"
composer = { path = "../../composer" }
const_format = "0.2"
csv = "1"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
indoc = "2"
# libcnb has a much bigger impact on buildpack behaviour than any other dependencies,
# so it's pinned to an exact version to isolate it from lockfile refreshes.
libcnb = "=0.19.0"
libherokubuildpack = { version = "=0.19.0", default-features = false, features = ["log"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tar = "0.4"
ureq = { version = "2", default-features = false, features = ["tls"] }
url = { version = "2", features = ["serde"] }
warned = "0.1"

[dev-dependencies]
assert-json-diff = "2"
exponential-backoff = "1"
figment = { version = "0.10", features = ["toml"] }
libcnb-test = "=0.17.0"
