[package]
name = "php-buildpack"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bullet_stream = ">=0.8, <1"
chrono = { version = "0.4", default-features = false, features = ["now"] }
composer = { path = "../../composer" }
const_format = "0.2"
csv = "1"
exponential-backoff = "2"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
fs-err = "3"
fun_run = "0.6"
indoc = "2"
libcnb = { version = "0.29", features = ["trace"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tar = { version = "0.4", default-features = false }
ureq = { version = "2", default-features = false, features = ["tls"] }
url = { version = "2", features = ["serde"] }
warned = "0.1"

[dev-dependencies]
assert-json-diff = "2"
figment = { version = "0.10", features = ["toml"] }
libcnb-test = "0.29"
rstest = "0.26"
tempfile = "3"
